# pgpt-mcp

./: Makefile  PentestGPT_design.md  README.md  pyproject.toml  requirements.txt  setup.py
logs/: pentestGPT_log_1764798956.281916.txt  pentestGPT_log_1764801491.6121879.txt
pentestgpt/: interactions.py  main.py  session.py
pentestgpt/gui/: __init__.py  ollama_console.py
pentestgpt/utils/: pentest_gpt.py
pentestgpt/utils/APIs/: module_import.py
